Bug 1270154: P1. Forget the media element's media-resource-specific tracks when error occurs. r=jwwang

MozReview-Commit-ID: BFpw2sS7aa7